# protobuf-example

./: README.md
cpp/: CMakeLists.txt  reading_message.cc
cpp/proto/: CMakeLists.txt
python/: writing_message.py
