PROJECT(rpc)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
SET(CMAKE_CXX_FLAGS "-g -Wall -Werror -std=c++11")

FIND_PACKAGE(Protobuf REQUIRED)
ADD_SUBDIRECTORY(proto)

MESSAGE(STATUS  ${PROTOBUF_LIBRARIES})
MESSAGE(STATUS  ${PROTOBUF_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ADD_EXECUTABLE(writing_message writing_message.cc)
ADD_EXECUTABLE(reading_message reading_message.cc)

TARGET_LINK_LIBRARIES(writing_message proto ${PROTOBUF_LIBRARIES})
TARGET_LINK_LIBRARIES(reading_message proto ${PROTOBUF_LIBRARIES})



